General clean-up and refactoring, a lot of critical bug-fixes, template/layout improvements.